# trading

./: .env.example  .gitignore  AGENTS.md  CLAUDE_CODE_HANDOFF.md  Makefile  README.md  Run Scanner.command  SETUP.md  Start Dashboard.command  claude_implement.md  claude_interact_plan.md  codex_pead_v2_plan.md  dashboard_server.py  demo_data.py  main.py  requirements.txt  trading_plan_claude.md  trading_plan_codex.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/adapters/: alpaca.py  fmp.py
backend/app/adapters/llm/: base.py  mock.py  openai_provider.py  (+1 more)
backend/app/analysis/: __init__.py  pead_proxy_backtest.py  pead_strategy_lab.py
backend/app/db/: helpers.py  repositories.py
backend/app/models/: __init__.py  config.py  events.py  recommendations.py  roles.py  trades.py
backend/app/roles/: base.py  orchestrator.py  quant_pricing.py  research.py  risk.py  trader.py
backend/app/routes/: agora.py  config.py  deps.py  events.py  recommendations.py  roles.py  scanner.py  strategy_settings.py  subjects.py  trades.py
backend/app/services/: agora_bridge.py  discussion_subjects.py  event_bus.py  exit_manager.py  filters.py  market_poller.py  market_pulse.py  mock_events.py  portfolio.py  position_sizing.py  scanner.py  state_machine.py  voice_commands.py  voice_tools.py
backend/tests/: conftest.py  test_conviction_sizing.py  test_orchestrator.py  test_pead_proxy_backtest.py  test_pead_strategy_lab.py  test_position_sizing.py  test_routes.py  test_sell_endpoint.py  test_settings.py  test_state_machine.py
(+59 files in other folders)
